examples/grpc-bridge/client/envoy-proxy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9911
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          add_user_agent: true
          stat_prefix: egress_http
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - grpc
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend-proxy
          http_filters:
          - name: envoy.filters.http.grpc_http1_bridge
          - name: envoy.filters.http.router
  clusters:
  - name: backend-proxy
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.5s
    http_protocol_options: {}
    load_assignment:
      cluster_name: backend-proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: kv-backend-proxy
                port_value: 8811
